--- a/plugin/notes/notes.html
+++ b/plugin/notes/notes.html
@@ -15,6 +15,7 @@
 				width: 640px;
 				margin-top: 5px;
 				clear: left;
+				white-space: pre;
 			}
 
 			#wrap-current-slide {
@@ -28,6 +29,7 @@
 				width: 1280px;
 				height: 1024px;
 				border: none;
+				clear: both;
 
 				-webkit-transform-origin: 0 0;
 				   -moz-transform-origin: 0 0;
@@ -102,7 +104,8 @@
 				margin: 30px 0 0 10px;
 				float: left;
 				text-align: center;
-				opacity: 0;
+				opacity: 80%;
+				float: right;
 
 				-webkit-transition: opacity 0.4s;
 				   -moz-transition: opacity 0.4s;
@@ -133,19 +136,15 @@
 				color: #ddd;
 			}
 
+			.drink:after {
+				color: blue;
+				font-weight: bold;
+				content: "TAKE A DRINK";
+			}
 		</style>
 	</head>
 
 	<body>
-
-		<div id="wrap-current-slide" class="slides">
-			<script>document.write( '<iframe width="1280" height="1024" id="current-slide" src="'+ window.opener.location.href +'?receiver"></iframe>' );</script>
-		</div>
-
-		<div id="wrap-next-slide" class="slides">
-			<script>document.write( '<iframe width="640" height="512" id="next-slide" src="'+ window.opener.location.href +'?receiver"></iframe>' );</script>
-			<span>UPCOMING:</span>
-		</div>
 
 		<div class="time">
 			<div class="clock">
@@ -160,6 +159,15 @@
 
 		<div id="notes"></div>
 
+		<div id="wrap-current-slide" class="slides">
+			<script>document.write( '<iframe width="1280" height="1024" id="current-slide" src="'+ window.opener.location.href +'"></iframe>' );</script>
+		</div>
+
+		<div id="wrap-next-slide" class="slides">
+			<script>document.write( '<iframe width="640" height="512" id="next-slide" src="'+ window.opener.location.href +'"></iframe>' );</script>
+			<span>UPCOMING:</span>
+		</div>
+
 		<script src="../../plugin/markdown/marked.js"></script>
 		<script>
 
@@ -169,12 +177,10 @@
 
 					var notes = document.getElementById( 'notes' ),
 						currentSlide = document.getElementById( 'current-slide' ),
-						nextSlide = document.getElementById( 'next-slide' ),
-						silenced = false;
+						nextSlide = document.getElementById( 'next-slide' );
 
 					window.addEventListener( 'message', function( event ) {
 						var data = JSON.parse( event.data );
-
 						// No need for updating the notes in case of fragment changes
 						if ( data.notes !== undefined) {
 							if( data.markdown ) {
@@ -185,13 +191,18 @@
 							}
 						}
 
-						silenced = true;
-
-						// Update the note slides
-						currentSlide.contentWindow.Reveal.slide( data.indexh, data.indexv, data.indexf );
-						nextSlide.contentWindow.Reveal.slide( data.nextindexh, data.nextindexv );
-
-						silenced = false;
+						// Showing and hiding fragments
+						if( data.fragment === 'next' ) {
+							currentSlide.contentWindow.Reveal.nextFragment();
+						}
+						else if( data.fragment === 'prev' ) {
+							currentSlide.contentWindow.Reveal.prevFragment();
+						}
+						else {
+							// Update the note slides
+							currentSlide.contentWindow.Reveal.slide( data.indexh, data.indexv );
+							nextSlide.contentWindow.Reveal.slide( data.nextindexh, data.nextindexv );
+						}
 
 					}, false );
 
@@ -223,25 +234,12 @@
 
 					}, 1000 );
 
-					// Broadcasts the state of the notes window to synchronize
-					// the main window
-					function synchronizeMainWindow() {
-
-						if( !silenced ) {
-							var indices = currentSlide.contentWindow.Reveal.getIndices();
-							window.opener.Reveal.slide( indices.h, indices.v, indices.f );
-						}
-
-					}
-
 					// Navigate the main window when the notes slide changes
-					currentSlide.contentWindow.Reveal.addEventListener( 'slidechanged', synchronizeMainWindow );
-					currentSlide.contentWindow.Reveal.addEventListener( 'fragmentshown', synchronizeMainWindow );
-					currentSlide.contentWindow.Reveal.addEventListener( 'fragmenthidden', synchronizeMainWindow );
+					currentSlide.contentWindow.Reveal.addEventListener( 'slidechanged', function( event ) {
 
-					// Reconfigure the notes window to remove needless UI
-					currentSlide.contentWindow.Reveal.configure({ controls: false, progress: false, overview: false });
-					nextSlide.contentWindow.Reveal.configure({ controls: false, progress: false, overview: false });
+						window.opener.Reveal.slide( event.indexh, event.indexv );
+
+					} );
 
 				}
 				else {
