tweak "questions" slide formatting

--- a/index.html
+++ b/index.html
@@ -529,11 +529,11 @@
           <h3>(you probably don't need git flow for school)</h3>
         </section>
 
-        <section>
-          <h1>thanks!</h1>
+        <section class=last-slide>
+          <h1 class=thanks>thanks!</h1>
 
-          <h3>
-            @aaronj1335 on
+          <h3 class=contact>
+            <span class=lower>@aaronj1335</span> &nbsp; on
             <a href="https://twitter.com/aaronj1335">
               <i class=icon-twitter></i>
             </a>
@@ -543,14 +543,21 @@
             </a>
           </h3>
 
-          <h3>
+          <h4 class=slides-at>
+            slides at
+            <a class=lower href="https://github.com/aaronj1335/git-complex-but-worth-it">
+              github.com/aaronj1335/git-complex-but-worth-it
+            </a>
+          </h4>
+
+          <h3 class=hiring>
             don't forget
             <a href="http://careers.stackoverflow.com/company/waterfall-mobile">
               waterfall is hiring!
             </a>
           </h3>
 
-          <h1>questions?</h1>
+          <h1 class=questions>questions?</h1>
         </section>
       </div>
     </div>
