fixed all of the image links

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <li class=fragment>generally considered very fast</li>
             <li class=fragment>
               it doesn't try to be too intelligent
-              <img src=/img/git-is-stupid.png />
+              <img src=img/git-is-stupid.png />
             </li>
             <li class=fragment>many find it less intuitive</li>
           </ul>
@@ -458,7 +458,7 @@
         </section>
 
         <section>
-          <img src="/img/git-flow.png" />
+          <img src="img/git-flow.png" />
 
           <p>
             (<a href="http://nvie.com/posts/a-successful-git-branching-model/">source</a>)
